2005-12-13  Chris Burdess  <dog@gnu.org>

	* gnu/xml/stream/SAXParser.java,
	  gnu/xml/stream/XIncludeFilter.java,
	  gnu/xml/stream/XMLInputFactoryImpl.java,
	  gnu/xml/stream/XMLParser.java: Addition of XInclude filter.

2005-12-13  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/html/HTMLDocument.java
	(getReader): Implemented.
	(getReader): Implemented.

2005-12-13  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/html/HTMLDocument.java
	(BlockElement.getName): Should use getAttribute because the API says
	that this function can return null.
	(RunElement): New class implemented.
	(RunElement.getName): Implemented.
	(RunElement.getResolvingParent): Implemented.

2005-12-13  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/html/HTMLEditorKit.java
	(getHTMLDocument): Fixed implementation to catch exception.
	(getHTMLEditorKit): Likewise.
	(getElementsAt): Fixed to use recursion. Now all elements
	and all their children are added to the array, only using
	the default root element.
	(getElementsAt): New private helper function. Uses recursion.
	(elementCountToTag): Implemented.
	(findElementMatchingTag): Implemented.
	(parserCallback): Removed TODO comment. Nothing should be done here.
	All work for parser, is done in javax/swing/text/html/Parser.java
	and HTMLDocument.
	(flush): Likewise.
	(handleComment): Likewise.
	(handleEndOfLineString): Likewise.
	(handleEndTag): Likewise.
	(handleError): Likewise.
	(handleSimpleTag): Likewise.
	(handleStartTag): Likewise.
	(handleText): Likewise.
	(HTMLEditorKit): Implemented and added API documentation.
	(getParser): Fixed implementation to use a field to store the parser.
	(insertHTML): Implemented.
	(read): Implemented.
	(write): Partially implemented.
	(install): Added code to add the mouse listener.
	(deinstall): Added code to remove the mouse listener.
	(getActions): Modified FIXME comment.
	(getInputAttributes): Likewise.

2005-12-13  Anthony Balkissoon  <abalkiss@redhat.com>
